--- a/index.html
+++ b/index.html
@@ -20,57 +20,59 @@
     </header>
     <section id="section1">
         <h2>À propos</h2>
-        <p>Salut à vous et bienvenue.<BR>
-        C'est moi Halim ! 👋<BR>
-        Curieux de nature vous trouverez ici une partie de mon univers et de mes skills </p>
-        <img align="middle" class="foto" src="halim.JPG" height="400" width="250" alt="check ligne 25 html" >
+        <p>Salut à vous et bienvenue.<br>
+        C'est moi Halim ! 👋<br>
+        Curieux de nature, vous trouverez ici une partie de mon univers et de mes compétences.</p>
+        <img class="foto" src="halim.JPG" height="400" width="250" alt="Photo de Halim">
     </section>
     <section id="section2">
         <h2>Portfolio</h2>
-        <p>En parallèle de la formation, j'apprendre également à créer un site internet avec HTML et CSS.</p>
-        <img src="P1.png" height="250" width="400">
-        <img src="P2.png" height="250" width="400">
+        <p>En parallèle de ma formation, j'apprends également à créer un site internet avec HTML et CSS.</p>
+        <img src="P1.png" height="250" width="400" alt="Projet 1">
+        <img src="P2.png" height="250" width="400" alt="Projet 2">
 
         <h2>Les outils 🛠️ (Work in progress)</h2>
 
-    <div class="card-container">
-        <div class="card">
-            <h4>Le dashboarding</h4>
-            <img src="powerbi.png" alt="Image 1" height="100" width="200">
-            <p>Permet de visualiser les analyses.</p>
-            <a href="#" class="button">En savoir plus</a>
+        <div class="card-container">
+            <div class="card">
+                <h4>Le dashboarding</h4>
+                <img src="powerbi.png" alt="Power BI" height="100" width="200">
+                <p>Permet de visualiser les analyses.</p>
+                <a href="#" class="button">En savoir plus</a>
+            </div>
+            <div class="card">
+                <h4>MySQL Workbench</h4>
+                <img src="MySQL.svg" alt="MySQL Workbench" height="100" width="200">
+                <p>Requêter dans les bases de données.</p>
+                <a href="#" class="button">En savoir plus</a>
+            </div>
+            <div class="card">
+                <h4>Python</h4>
+                <img src="python.jpg" alt="Python" height="100" width="200">
+                <p>Outil puissant pour la collecte,<br>le traitement et l'analyse.</p>
+                <a href="#" class="button">En savoir plus</a>
+            </div>
         </div>
-        <div class="card">
-            <h4>MySQL Workbench</h4>
-            <img src="MySQL.svg" alt="Image 2" height="100" width="200">
-            <p>Requêter dans les bases de donnée</p>
-            <a href="#" class="button">En savoir plus</a>
-        </div>
-        <div class="card">
-            <h4>Python</h4>
-            <img src="python.jpg" alt="Image 3" height="100" width="200">
-            <p>Outils puissant pour la collecte, <BR>le traitement et l'analyse</p>
-            <a href="#" class="button">En savoir plus</a>
-        </div>
-    </div>
     </section>
 
-    <section id="section3"># EN CHANTIER
+    <section id="section3">
         <h2>Mes centres d'intérêt</h2>
-        <p>Présentation de mes différents passe temps 😎</p>
-        <h3> L'escalade ! Depuis 15 ans </h3>
-        <img src="E2.jpg" height="400" width="300">
-        <img src="E1.JPG" height="400" width="300">
-        <h3>Montage vidéo (Final CutPro)</h3>
-        <video width="640" height="360" controls >
-            <source src="La grimpe.mp4" >
+        <p>Présentation de mes différents passe-temps 😎</p>
+        <h3>L'escalade ! Depuis 15 ans</h3>
+        <img src="E2.jpg" height="400" width="300" alt="Escalade 1">
+        <img src="E1.JPG" height="400" width="300" alt="Escalade 2">
+        <h3>Montage vidéo (Final Cut Pro)</h3>
+        <video width="640" height="360" controls>
+            <source src="La grimpe.mp4" type="video/mp4">
+            Votre navigateur ne prend pas en charge la lecture vidéo.
         </video>
     </section>
+
     <section id="section4">
         <h2>Contact</h2>
         <p>Pour me contacter ou obtenir un CV, envoyez un email à <a href="mailto:halim.moulay@gmail.com">halim.moulay@gmail.com</a>.</p>
-        <p>Mon linkedin  <a href=https://www.linkedin.com/in/halim-moulay-219b30274/>halim moulay </a></p>
-        <p>Mon GitHub  <a href=https://github.com/HighKuu> HighKuu </a></p>
+        <p>Mon LinkedIn : <a href="https://www.linkedin.com/in/halim-moulay-219b30274/">Halim Moulay</a></p>
+        <p>Mon GitHub : <a href="https://github.com/HighKuu">HighKuu</a></p>
     </section>
     <footer>
         <p>© 2024 Mon Site Web</p>
