--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon Site Web</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Lien vers la police Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <!-- Lien vers ton fichier CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -24,6 +29,8 @@
         C'est moi Halim ! 👋<br>
         Curieux de nature, vous trouverez ici une partie de mon univers et de mes compétences.</p>
         <img class="foto" src="halim.JPG" height="400" width="250" alt="Photo de Halim">
+        <img class="foto" src="halim2.jpeg" height="400" width="250" alt="Photo de Halim2">
+        <img class="foto" src="halim3.jpeg" height="400" width="250" alt="Photo de Halim3">
     </section>
     <section id="section2">
         <h2>Portfolio</h2>
@@ -38,7 +45,7 @@
                 <h4>Le dashboarding</h4>
                 <img src="powerbi.png" alt="Power BI" height="100" width="200">
                 <p>Permet de visualiser les analyses.</p>
-                <a href="#" class="button">En savoir plus</a>
+                <a href="powerBI.html" class="button">En savoir plus</a>
             </div>
             <div class="card">
                 <h4>MySQL Workbench</h4>
@@ -58,21 +65,23 @@
     <section id="section3">
         <h2>Mes centres d'intérêt</h2>
         <p>Présentation de mes différents passe-temps 😎</p>
-        <h3>L'escalade ! Depuis 15 ans</h3>
+        <h3>La grimpe !</h3>
+        <p>Passioné depuis presque 16 ans, je pratique ce sport assidument</p>
         <img src="E2.jpg" height="400" width="300" alt="Escalade 1">
         <img src="E1.JPG" height="400" width="300" alt="Escalade 2">
         <h3>Montage vidéo (Final Cut Pro)</h3>
         <video width="640" height="360" controls>
-            <source src="La grimpe.mp4" type="video/mp4">
+            <source src="La grimpe.mp4" type="video/mp4" >
             Votre navigateur ne prend pas en charge la lecture vidéo.
         </video>
     </section>
 
     <section id="section4">
         <h2>Contact</h2>
-        <p>Pour me contacter ou obtenir un CV, envoyez un email à <a href="mailto:halim.moulay@gmail.com">halim.moulay@gmail.com</a>.</p>
-        <p>Mon LinkedIn : <a href="https://www.linkedin.com/in/halim-moulay-219b30274/">Halim Moulay</a></p>
-        <p>Mon GitHub : <a href="https://github.com/HighKuu">HighKuu</a></p>
+        <p><i class="fas fa-envelope"></i> Pour me contacter ou obtenir un CV, envoyez un email à <a href="mailto:halim.moulay@gmail.com" target="_blank">halim.moulay@gmail.com</a>.</p>
+        <p><i class="fab fa-linkedin"></i> Mon LinkedIn : <a href="https://www.linkedin.com/in/halim-moulay-219b30274/" target="_blank">Halim Moulay</a></p>
+        <p><i class="fab fa-github"></i> Mon GitHub : <a href="https://github.com/HighKuu" target="_blank">HighKuu</a></p>
+
     </section>
     <footer>
         <p>© 2024 Mon Site Web</p>
